--- a/src/utils/style/styles.css
+++ b/src/utils/style/styles.css
@@ -39,6 +39,14 @@
   border-radius: 50%;
 }
 
+.avatar-hito {
+  box-sizing: border-box;
+  width: 55px;
+  height: 55px;
+  border: 1px solid #fff;
+  border-radius: 50%;
+}
+
 /* Grouped Buttons */
 
 @media (min-width: 700px) {
